# GlistShaderToHeader

./: CMakeLists.txt  README.md
.github/workflows/: build-and-release.yml
src/: ShaderToHeader.cpp
